--- a/assets/sass/screen.scss
+++ b/assets/sass/screen.scss
@@ -44,7 +44,8 @@
   "components/tabs",
   "components/messages",
   "components/icons",
-  "components/forms"
+  "components/forms",
+  "components/buttons"
 ;
 
 // Pages
