--- a/assets/sass/base/_typography.scss
+++ b/assets/sass/base/_typography.scss
@@ -19,3 +19,21 @@ h6 { @include font-size($h6-size); }
 
 /* Paragraphs */
 p {}
+
+/**
+ * Inline font elements
+ */
+
+/**
+ * Strong
+ *
+ * 1. To avoid overstyling, scope strongs that have a parent <p> to the
+ * primary font, but bolded.
+ */ 
+strong {
+  font-weight: 700;
+}
+
+p strong {
+  @include font(roboto, bold); /* 1 */
+}
