--- a/assets/sass/components/_messages.scss
+++ b/assets/sass/components/_messages.scss
@@ -27,7 +27,7 @@ $msg-warning-border: #ffeb3b;
 .messages {
 	@include vr;
 	/* Box model */
-	padding: spacing-unit();
+	padding: su();
 	/* Presentation */
 	border: 0 solid #ccc;
 	border-width: 3px;
