--- a/assets/sass/components/_tabs.scss
+++ b/assets/sass/components/_tabs.scss
@@ -6,7 +6,7 @@
 //
 
 .tabs { // the class on the ul
-  padding: 0 spacing-unit(1/2);
+  padding: 0 su(.5);
 	border-bottom: 1px solid #ccc;
 	
 	li {
@@ -21,7 +21,7 @@
 
   a {
     display: block;
-    padding: spacing-unit(1/4) spacing-unit(1/2);
+    padding: su(.25) su(.5);
 
     &.active { background: #eee;}
     &:hover  { background-color: #ccc; }
