update node packages, vars

--- a/assets/sass/base/_vars.scss
+++ b/assets/sass/base/_vars.scss
@@ -85,7 +85,7 @@ $font-weight-semibold: 600;
 $fonts: (
   roboto: (
     regular: "\"Roboto\", Arial, sans-serif",
-    bold: "\Roboto Bold\", Arial, sans-serif",
+    bold: "\"Roboto Bold\", Arial, sans-serif",
   ),
 );
 
