--- a/assets/src/sass/styles.scss
+++ b/assets/src/sass/styles.scss
@@ -25,10 +25,11 @@
  "layout/footer"
 ;
 
-// // Component styles
-// @import 
-//   "component/"
-// ;
+// Component styles
+@import
+  // objects
+  "components/object.container-inline"
+;
 
 // // Page styles
 // @import 
