--- a/assets/src/sass/styles.scss
+++ b/assets/src/sass/styles.scss
@@ -28,7 +28,8 @@
 // Component styles
 @import
   // objects
-  "components/object.container-inline"
+  "components/object.container-inline",
+  "components/object.breadcrumb"
 ;
 
 // // Page styles
