--- a/assets/src/sass/layout/_global.scss
+++ b/assets/src/sass/layout/_global.scss
@@ -2,10 +2,8 @@
  * @file
  * Global layout styles
  */
-.site {
-  @include mq($until: desk) {
-    margin-bottom: su();
-  }
+.site-main {
+  margin-bottom: su();
 }
 
 .layout-container {
