--- a/assets/src/sass/styles.scss
+++ b/assets/src/sass/styles.scss
@@ -29,7 +29,10 @@
 @import
   // objects
   "components/object.container-inline",
-  "components/object.breadcrumb"
+  "components/object.breadcrumb",
+
+  // nodes
+  "components/node.page"
 ;
 
 // // Page styles
